Style scrollbar of device selector correctly

--- a/src/Device/DeviceSelector/DeviceList/device-list.scss
+++ b/src/Device/DeviceSelector/DeviceList/device-list.scss
@@ -31,5 +31,7 @@
         .details .name:not(:focus) {
             pointer-events: none;
         }
+
+        @include scrollbars($primary);
     }
 }
